[gd_scene load_steps=14 format=3 uid="uid://8ted088ouecj"]

[ext_resource type="Script" uid="uid://bqdf7gc6xlnfn" path="res://scenes/multiplayer_lobby.gd" id="1_2meg6"]
[ext_resource type="Texture2D" uid="uid://ddt6pnkjtn1fw" path="res://assets/textures/interfaces/dialog.png" id="1_8ihvg"]
[ext_resource type="Theme" uid="uid://b3lrippcdysde" path="res://themes/button/main_menu_button.tres" id="2_2meg6"]
[ext_resource type="ButtonGroup" uid="uid://bjpbh6nnmym1o" path="res://resources/button_group/mod_scene/multiplayer_scene_button_group.tres" id="4_2meg6"]
[ext_resource type="Script" uid="uid://dl131pw2ff4kj" path="res://scripts/multiplayer_scene/multiplayer_scene_button.gd" id="4_nwqwq"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0t1s1"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4ea5e"]
atlas = ExtResource("1_8ihvg")
region = Rect2(512, 464, 209, 33)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nwqwq"]
bg_color = Color(0.19, 0.19, 0.19, 1)

[sub_resource type="SystemFont" id="SystemFont_2meg6"]
subpixel_positioning = 0

[sub_resource type="Theme" id="Theme_8ihvg"]
Label/colors/font_shadow_color = Color(0, 0, 0, 0.678431)
Label/constants/shadow_outline_size = 5
Label/font_sizes/font_size = 25
Label/fonts/font = SubResource("SystemFont_2meg6")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7i87j"]
bg_color = Color(0.14, 0.14, 0.14, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wimrx"]

[sub_resource type="LabelSettings" id="LabelSettings_nwqwq"]
font_size = 25
shadow_size = 4
shadow_color = Color(0, 0, 0, 0.65098)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2meg6")
multiplayer_scene_button_group = ExtResource("4_2meg6")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0t1s1")

[node name="MainMenu" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.02
anchor_top = 0.02
anchor_right = 0.98
anchor_bottom = 0.98
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_4ea5e")
patch_margin_left = 9
patch_margin_top = 9
patch_margin_right = 9
patch_margin_bottom = 9
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="MainMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 9
theme_override_constants/margin_top = 9
theme_override_constants/margin_right = 9
theme_override_constants/margin_bottom = 9

[node name="Background" type="Panel" parent="MainMenu/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_nwqwq")

[node name="MarginContainer" type="MarginContainer" parent="MainMenu/MarginContainer/Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="Control" type="Control" parent="MainMenu/MarginContainer/Background/MarginContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="MainMenu/MarginContainer/Background/MarginContainer/Control"]
layout_mode = 1
anchor_right = 1.0
anchor_bottom = 0.05
grow_horizontal = 2

[node name="MarginContainer" type="MarginContainer" parent="MainMenu/MarginContainer/Background/MarginContainer/Control/Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -83.5
offset_right = 83.5
offset_bottom = 41.875
grow_horizontal = 2
theme_override_constants/margin_top = 6

[node name="Label" type="Label" parent="MainMenu/MarginContainer/Background/MarginContainer/Control/Control/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = SubResource("Theme_8ihvg")
theme_override_constants/shadow_outline_size = 2
text = "Multiplayer"

[node name="Control3" type="Control" parent="MainMenu/MarginContainer/Background/MarginContainer/Control"]
layout_mode = 1
anchor_top = 0.05
anchor_right = 0.7
anchor_bottom = 0.1

[node name="Control" type="Control" parent="MainMenu/MarginContainer/Background/MarginContainer/Control/Control3"]
layout_mode = 1
anchor_right = 0.55
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="MainMenu/MarginContainer/Background/MarginContainer/Control/Control3/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -11.1667
offset_right = 25.0
offset_bottom = 11.1667
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_8ihvg")
text = "Server"

[node name="Control2" type="Control" parent="MainMenu/MarginContainer/Background/MarginContainer/Control/Control3"]
layout_mode = 1
anchor_left = 0.55
anchor_right = 0.65
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="MainMenu/MarginContainer/Background/MarginContainer/Control/Control3/Control2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -11.1667
offset_right = 25.0
offset_bottom = 11.1667
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_8ihvg")
theme_override_constants/shadow_outline_size = 2
text = "Players"

[node name="Control3" type="Control" parent="MainMenu/MarginContainer/Background/MarginContainer/Control/Control3"]
layout_mode = 1
anchor_left = 0.65
anchor_right = 0.85
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="MainMenu/MarginContainer/Background/MarginContainer/Control/Control3/Control3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -11.1667
offset_right = 25.0
offset_bottom = 11.1667
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_8ihvg")
theme_override_constants/shadow_outline_size = 2
text = "Location"

[node name="Control4" type="Control" parent="MainMenu/MarginContainer/Background/MarginContainer/Control/Control3"]
layout_mode = 1
anchor_left = 0.85
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="MainMenu/MarginContainer/Background/MarginContainer/Control/Control3/Control4"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -11.1667
offset_right = 25.0
offset_bottom = 11.1667
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_8ihvg")
theme_override_constants/shadow_outline_size = 2
text = "Status"

[node name="Control2" type="Control" parent="MainMenu/MarginContainer/Background/MarginContainer/Control"]
layout_mode = 1
anchor_top = 0.1
anchor_right = 1.0
anchor_bottom = 0.93
grow_horizontal = 2
grow_vertical = 0

[node name="Control" type="Control" parent="MainMenu/MarginContainer/Background/MarginContainer/Control/Control2"]
layout_mode = 1
anchor_right = 0.7
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="MainMenu/MarginContainer/Background/MarginContainer/Control/Control2/Control"]
layout_mode = 1
anchor_right = 1.0
anchor_bottom = 0.6
grow_horizontal = 2

[node name="Panel" type="Panel" parent="MainMenu/MarginContainer/Background/MarginContainer/Control/Control2/Control/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_7i87j")

[node name="Control2" type="Control" parent="MainMenu/MarginContainer/Background/MarginContainer/Control/Control2/Control"]
layout_mode = 1
anchor_top = 0.6
anchor_right = 1.0
anchor_bottom = 0.7
grow_horizontal = 2

[node name="Panel" type="Panel" parent="MainMenu/MarginContainer/Background/MarginContainer/Control/Control2/Control/Control2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_wimrx")

[node name="MarginContainer" type="MarginContainer" parent="MainMenu/MarginContainer/Background/MarginContainer/Control/Control2/Control/Control2/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.2
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 4
theme_override_constants/margin_bottom = 5

[node name="FilterGames" type="Button" parent="MainMenu/MarginContainer/Background/MarginContainer/Control/Control2/Control/Control2/Panel/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
focus_mode = 0
theme = ExtResource("2_2meg6")
theme_override_font_sizes/font_size = 25
toggle_mode = true
button_group = ExtResource("4_2meg6")
text = " "
script = ExtResource("4_nwqwq")
description = "Filter Games"

[node name="Label" type="Label" parent="MainMenu/MarginContainer/Background/MarginContainer/Control/Control2/Control/Control2/Panel/MarginContainer/FilterGames"]
modulate = Color(0.8, 0.8, 0.8, 1)
layout_mode = 1
offset_left = -69.5
offset_top = 3.0521
offset_right = 82.5
offset_bottom = 37.9479
pivot_offset = Vector2(76, 17.4479)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Filter Games"
label_settings = SubResource("LabelSettings_nwqwq")

[node name="MarginContainer2" type="MarginContainer" parent="MainMenu/MarginContainer/Background/MarginContainer/Control/Control2/Control/Control2/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.6
anchor_right = 0.8
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="DirectIp" type="Button" parent="MainMenu/MarginContainer/Background/MarginContainer/Control/Control2/Control/Control2/Panel/MarginContainer2"]
layout_mode = 2
size_flags_vertical = 4
focus_mode = 0
theme = ExtResource("2_2meg6")
theme_override_font_sizes/font_size = 25
toggle_mode = true
button_group = ExtResource("4_2meg6")
text = " "
script = ExtResource("4_nwqwq")
kind = 1
description = "Direct IP"

[node name="Label" type="Label" parent="MainMenu/MarginContainer/Background/MarginContainer/Control/Control2/Control/Control2/Panel/MarginContainer2/DirectIp"]
modulate = Color(0.8, 0.8, 0.8, 1)
layout_mode = 1
offset_left = -45.0
offset_top = 3.0521
offset_right = 58.0
offset_bottom = 37.9479
pivot_offset = Vector2(51.5, 17.4479)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Direct IP"
label_settings = SubResource("LabelSettings_nwqwq")

[node name="MarginContainer3" type="MarginContainer" parent="MainMenu/MarginContainer/Background/MarginContainer/Control/Control2/Control/Control2/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.8
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 4
theme_override_constants/margin_bottom = 5

[node name="Create" type="Button" parent="MainMenu/MarginContainer/Background/MarginContainer/Control/Control2/Control/Control2/Panel/MarginContainer3"]
layout_mode = 2
size_flags_vertical = 4
focus_mode = 0
theme = ExtResource("2_2meg6")
theme_override_font_sizes/font_size = 25
toggle_mode = true
button_group = ExtResource("4_2meg6")
text = " "
script = ExtResource("4_nwqwq")
kind = 2
description = "Create"

[node name="Label" type="Label" parent="MainMenu/MarginContainer/Background/MarginContainer/Control/Control2/Control/Control2/Panel/MarginContainer3/Create"]
modulate = Color(0.8, 0.8, 0.8, 1)
layout_mode = 1
offset_left = -33.5
offset_top = 3.0521
offset_right = 46.5
offset_bottom = 37.9479
pivot_offset = Vector2(40, 17.4479)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Create"
label_settings = SubResource("LabelSettings_nwqwq")

[node name="Control3" type="Control" parent="MainMenu/MarginContainer/Background/MarginContainer/Control/Control2/Control"]
layout_mode = 1
anchor_top = 0.7
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="Control" type="Control" parent="MainMenu/MarginContainer/Background/MarginContainer/Control/Control2/Control/Control3"]
layout_mode = 1
anchor_right = 0.7
anchor_bottom = 1.0
grow_vertical = 2

[node name="Panel" type="Panel" parent="MainMenu/MarginContainer/Background/MarginContainer/Control/Control2/Control/Control3/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_7i87j")

[node name="Control2" type="Control" parent="MainMenu/MarginContainer/Background/MarginContainer/Control/Control2/Control/Control3"]
layout_mode = 1
anchor_left = 0.72
anchor_right = 1.0
anchor_bottom = 1.0
grow_vertical = 2

[node name="Panel" type="Panel" parent="MainMenu/MarginContainer/Background/MarginContainer/Control/Control2/Control/Control3/Control2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_7i87j")

[node name="Control2" type="Control" parent="MainMenu/MarginContainer/Background/MarginContainer/Control/Control2"]
layout_mode = 1
anchor_left = 0.7
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2

[node name="Control" type="Control" parent="MainMenu/MarginContainer/Background/MarginContainer/Control/Control2/Control2"]
layout_mode = 1
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="MainMenu/MarginContainer/Background/MarginContainer/Control/Control2/Control2/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="MainMenu/MarginContainer/Background/MarginContainer/Control/Control2/Control2/Control/AspectRatioContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MainMenu/MarginContainer/Background/MarginContainer/Control/Control2/Control2"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_top = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/MarginContainer/Background/MarginContainer/Control/Control2/Control2/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MainMenu/MarginContainer/Background/MarginContainer/Control/Control2/Control2/MarginContainer/VBoxContainer"]
modulate = Color(0.8, 0.8, 0.8, 1)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "No Server Selected"
label_settings = SubResource("LabelSettings_nwqwq")

[node name="Control4" type="Control" parent="MainMenu/MarginContainer/Background/MarginContainer/Control"]
layout_mode = 1
anchor_top = 0.93
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="Control" type="Control" parent="MainMenu/MarginContainer/Background/MarginContainer/Control/Control4"]
layout_mode = 1
anchor_right = 0.7
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="MainMenu/MarginContainer/Background/MarginContainer/Control/Control4/Control"]
layout_mode = 1
anchor_right = 0.7
anchor_bottom = 1.0
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="MainMenu/MarginContainer/Background/MarginContainer/Control/Control4/Control/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_bottom = 5

[node name="Panel" type="Panel" parent="MainMenu/MarginContainer/Background/MarginContainer/Control/Control4/Control/Control/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_7i87j")

[node name="Control2" type="Control" parent="MainMenu/MarginContainer/Background/MarginContainer/Control/Control4/Control"]
layout_mode = 1
anchor_left = 0.72
anchor_right = 1.0
anchor_bottom = 1.0
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="MainMenu/MarginContainer/Background/MarginContainer/Control/Control4/Control/Control2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 4
theme_override_constants/margin_bottom = 5

[node name="LeaveChat" type="Button" parent="MainMenu/MarginContainer/Background/MarginContainer/Control/Control4/Control/Control2/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
focus_mode = 0
theme = ExtResource("2_2meg6")
theme_override_font_sizes/font_size = 25
toggle_mode = true
button_group = ExtResource("4_2meg6")
text = "                                           "
script = ExtResource("4_nwqwq")
kind = 3
description = "Leave Chat"

[node name="Label" type="Label" parent="MainMenu/MarginContainer/Background/MarginContainer/Control/Control4/Control/Control2/MarginContainer/LeaveChat"]
modulate = Color(0.8, 0.8, 0.8, 1)
layout_mode = 1
offset_left = 76.5
offset_top = 3.0521
offset_right = 209.5
offset_bottom = 37.9479
pivot_offset = Vector2(66.5, 17.4479)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Leave Chat"
label_settings = SubResource("LabelSettings_nwqwq")

[node name="Control2" type="Control" parent="MainMenu/MarginContainer/Background/MarginContainer/Control/Control4"]
layout_mode = 1
anchor_left = 0.7
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="MainMenu/MarginContainer/Background/MarginContainer/Control/Control4/Control2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 70
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 5

[node name="Back" type="Button" parent="MainMenu/MarginContainer/Background/MarginContainer/Control/Control4/Control2/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
focus_mode = 0
theme = ExtResource("2_2meg6")
theme_override_font_sizes/font_size = 25
toggle_mode = true
button_group = ExtResource("4_2meg6")
text = " "
script = ExtResource("4_nwqwq")
kind = 4
description = "Back"

[node name="Label" type="Label" parent="MainMenu/MarginContainer/Background/MarginContainer/Control/Control4/Control2/MarginContainer/Back"]
modulate = Color(0.8, 0.8, 0.8, 1)
layout_mode = 1
offset_left = -22.5
offset_top = 3.0521
offset_right = 35.5
offset_bottom = 37.9479
pivot_offset = Vector2(29, 17.4479)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Back"
label_settings = SubResource("LabelSettings_nwqwq")

[connection signal="ready" from="MainMenu/MarginContainer/Background/MarginContainer/Control/Control2/Control/Control2/Panel/MarginContainer/FilterGames" to="MainMenu/MarginContainer/Background/MarginContainer/Control/Control2/Control/Control2/Panel/MarginContainer/FilterGames" method="_on_ready"]
[connection signal="ready" from="MainMenu/MarginContainer/Background/MarginContainer/Control/Control2/Control/Control2/Panel/MarginContainer2/DirectIp" to="MainMenu/MarginContainer/Background/MarginContainer/Control/Control2/Control/Control2/Panel/MarginContainer2/DirectIp" method="_on_ready"]
[connection signal="ready" from="MainMenu/MarginContainer/Background/MarginContainer/Control/Control2/Control/Control2/Panel/MarginContainer3/Create" to="MainMenu/MarginContainer/Background/MarginContainer/Control/Control2/Control/Control2/Panel/MarginContainer3/Create" method="_on_ready"]
[connection signal="ready" from="MainMenu/MarginContainer/Background/MarginContainer/Control/Control4/Control/Control2/MarginContainer/LeaveChat" to="MainMenu/MarginContainer/Background/MarginContainer/Control/Control4/Control/Control2/MarginContainer/LeaveChat" method="_on_ready"]
[connection signal="ready" from="MainMenu/MarginContainer/Background/MarginContainer/Control/Control4/Control2/MarginContainer/Back" to="MainMenu/MarginContainer/Background/MarginContainer/Control/Control4/Control2/MarginContainer/Back" method="_on_ready"]
